--- a/src/main/resources/templates/menu/customCart.html
+++ b/src/main/resources/templates/menu/customCart.html
@@ -58,12 +58,12 @@
 <form id="menuForm" action="#" method="post" enctype="multipart/form-data">
 <h2>커스텀 샌드위치 주문</h2>
     <div class="section">
-        <h3 class="section-title">빵 선택</h3>
+        <h3 class="section-title">빵 선택 <span class="option-alert">필수 재료</span> </h3>
         <div class="option-grid" data-name="bread"></div>
     </div>
 
     <div class="section">
-        <h3 class="section-title">메인 재료</h3>
+        <h3 class="section-title">메인 재료 <span class="option-alert">필수 재료</span></h3>
         <div class="option-grid" data-name="material1"></div>
     </div>
 
@@ -78,12 +78,12 @@
     </div>
 
     <div class="section">
-        <h3 class="section-title">치즈 선택</h3>
+        <h3 class="section-title">치즈 선택 <span class="option-alert">필수 재료</span></h3>
         <div class="option-grid" data-name="cheese"></div>
     </div>
 
     <div class="section">
-        <h3 class="section-title">채소 선택</h3>
+        <h3 class="section-title">채소 선택 <span class="option-alert">필수 재료</span></h3>
         <div class="option-grid" data-name="vegetable1"></div>
         <h3 class="section-title">채소 <span class="highlight-orange">추가</span></h3>
         <div class="option-grid" data-name="vegetable2"></div>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="section">
-        <h3 class="section-title">소스 선택</h3>
+        <h3 class="section-title">소스 선택 <span class="option-alert">필수 재료</span></h3>
         <div class="option-grid" data-name="sauce1"></div>
         <h3 class="section-title">소스 <span class="highlight-orange">추가</span></h3>
         <div class="option-grid" data-name="sauce2"></div>
