--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -68,7 +68,7 @@
 
 <main>
 <!-- 타이틀 -->
-<h1 class="main-heading">ENJOY~ SANDIT!</h1>
+<h1 class="main-heading">ENJOY SANDIT!</h1>
 
 <!-- 메뉴 리스트 -->
 <div class="menu-container">
